--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ body {
 }
 .container {
   max-width: 400px;
+  width: 100%;
   background-color: hsl(0, 0%, 12%);
   padding: 30px;
   border-radius: 10px;
@@ -28,9 +29,42 @@ body {
 .container h1 {
   font-size: 1.5em;
   color: white;
+  text-align: center;
+  
 }
-ul {
+.container span {
+color: hsl(75, 94%, 57%);
+font-size: 15px;
+display: block;
+margin: 0.5em 0 1em;
+}
+.container p {
+  color: white;
+  font-size: 0.5em;
+  text-align: center;
+} 
+.container ul {
+  margin-top: 2em;
   list-style: none;
+  display: grid;
+  gap: 0.5em;
 }
-.attribution { font-size: 11px; text-align: center; }
+.container ul button {
+  background-color: hsl(0, 0%, 20%);
+  color: white;
+  font-size: 1em;
+  font-weight:bold;
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  cursor: pointer;
+} 
+.container ul button:hover {
+  background-color: hsl(75, 94%, 57%);
+  color: hsl(0, 0%, 12%);
+  transition: all 0.5s easre-in-out;
+}
+.attribution { font-size: 11px;color: white; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
